[package]
name = "awrite"
description = "awrite!(): the async write!()/format!() scratch buffer"
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
repository = "https://github.com/quartiq/awrite"
edition = "2021"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

[dev-dependencies]
tokio-test = "0.4.4"
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1", "std"] }

[features]
std = []
